tests/golden/snapshots/scaffold_recipes__scaffold_recipes_invalid_field_error.snap
---
source: tests/scaffold_recipes.rs
expression: contents
---
error: invalid input: invalid --fields entry `noType` (expected `name:type`)
